Enable verification in dev mode again (was disabled for profiling)