@@ -137,7 +137,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<jvmArgs>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED -Xverify:none</jvmArgs>
+					<jvmArgs>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</jvmArgs>
 				</configuration>
 			</plugin>
 			<plugin>
